--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,6 +108,12 @@
         <h1>Publications</h1>
           <ol>
             <li>
+              <b>DMO-DB: Mitigating the Data Movement Bottlenecks of GPU-Accelerated Relational OLAP</b> <br>
+              Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Joonsung Kim, Jinho Lee, and Youngsok Kim <br>
+              <i>34th International Conference on Parallel Architectures and Compilation Techniques (<b>PACT</b>), Nov. 2025 (to appear)</i> <br>
+              <span class="label label-sys">System SW</span> <span class="label label-gpu">GPU</span> <span class="label label-database">Database</span>
+            </li>
+            <li>
               <b><a href="https://doi.org/10.1145/3698827">SPID-Join: A Skew-resistant Processing-in-DIMM Join Algorithm Exploiting the Bank- and Rank-level Parallelisms of DIMMs</a></b> <br>
               Suhyun Lee, Chaemin Lim, <b>Jinwoo Choi</b>, Heelim Choi, Chan Lee, Yongjun Park, Kwanghyun Park, Hanjun Kim, and Youngsok Kim <br>
               <i>2025 ACM International Conference on Management of Data (<b>SIGMOD</b>), June 2025</i> <br>
