--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
         I am currently an Ph.D Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
-        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include computer system/architecture, mobile/embedded system, and system & architecture optimization for neural networks.
+        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include system & architecture optimization for neural networks, computer system/architecture, and mobile/embedded system.
           <ul>
             <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
@@ -113,6 +113,7 @@
               <i>34th International Conference on Parallel Architectures and Compilation Techniques (<b>PACT</b>), Nov. 2025 (to appear)</i> <br>
               <span class="label label-sys">System SW</span> <span class="label label-gpu">GPU</span> <span class="label label-database">Database</span>
             </li>
+            <br>
             <li>
               <b><a href="https://doi.org/10.1145/3698827">SPID-Join: A Skew-resistant Processing-in-DIMM Join Algorithm Exploiting the Bank- and Rank-level Parallelisms of DIMMs</a></b> <br>
               Suhyun Lee, Chaemin Lim, <b>Jinwoo Choi</b>, Heelim Choi, Chan Lee, Yongjun Park, Kwanghyun Park, Hanjun Kim, and Youngsok Kim <br>
