[UPDATE] CV & Intro & research interests

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
         I am currently an Ph.D Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
-        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. My current research interests include system & architecture optimization for neural networks, computer system/architecture, and mobile/embedded system.
+        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020.
           <ul>
             <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
             <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
@@ -98,11 +98,10 @@
 
         <h1>Research Interests</h1>
           <ul>
-            <li>System & Architecture Optimization for Neural Networks</li>
-            <li>Mobile / Embedded System</li>
-            <!-- <li>Computer System / Architecture</li> -->
-            <li>Scheduling</li>
-            <li>Neural Processing Unit (NPU)</li>
+            <li>Architecture and system optimizations for neural networks</li>
+            <li>Computer architecture, system software, and hardware acceleration</li>
+            <li>On-device machine learning on mobile/embedded devices</li>
+            <li>NPU architecture & performance analysis/modeling</li>
           </ul>
 
         <h1>Publications</h1>
@@ -180,10 +179,10 @@
           </li>
         </ul>
 
-        <h1>Project</h1>
+        <h1>Projects</h1>
         <ul>
           <li>
-            Searching Quality-Aware NN Scheduler, <i> LG Electronics </i>
+            Exploring Quality-Aware NN Scheduler, <i> LG Electronics </i>
           </li>
           <li>
             Designing a PIM-Based NPU Architecture and FPGA Prototyping, <i> Samsung Advanced Institute of Technology (SAIT) </i>
