[FIX] remove wrong award links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,10 +172,10 @@
         <h1> Awards </h1>
         <ul>
           <li>
-            July 2023. <a href="https://www.yonsei.ac.kr/ocx/news.jsp?mode=view&ar_seq=20240126141228753087&sr_volume=635&list_mode=list&sr_site=S&pager.offset=27">2023-2학기 대학원 혁신 우수논문 Award</a> (최우수상 from College of Computing)
+            July 2023. 2023-2학기 대학원 혁신 우수논문 Award</a> (최우수상 from College of Computing)
           </li>
           <li>
-            May 2022. A recipient of <a href="https://www.nrf.re.kr/biz/info/info/view?menu_no=378&biz_no=416">NRF 박사과정생 연구장려금지원 program</a>.
+            May 2022. A recipient of NRF 박사과정생 연구장려금지원 program</a>.
           </li>
         </ul>
 
