--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,21 +9,28 @@
 
     <link rel="stylesheet" type="text/css" href="style.css" />
     <style>
+
+      html {
+        font-size: 90%;
+      }
+      body{
+        text-align: left;
+      }
     
       .container {
-        margin: 0 auto;
-        max-width: 1000px;
-        padding: 0 0px;
-        width: 100%;
+        margin: 10px;
+        max-width: 100%; 
+        /* padding: 0 0px; */
+        /* width: 100%; */
       }
 
       h1 {
-        font-size: 30px;
+        font-size: 20px;
         line-height: 1;
       }
 
       h4 {
-        font-size: 18px;
+        font-size: 15px;
         line-height: 1;
         color: rgb(153, 153, 153);
       }
@@ -31,7 +38,7 @@
       span.label {
         display: inline-block;
         vertical-align: middle;
-        font-size: 100%;
+        font-size: 80%;
         font-weight: bold;
         line-height: 1;
         color: #fff;
@@ -66,7 +73,8 @@
           </td>
           <td valign="bottom" style="padding-left: 1em;">
             <h1>Jinwoo Choi</h1>
-            <h4>HPCP Lab @ Yonsei University</h4>
+            <!-- <h4>HPCP Lab @ Yonsei University</h4> -->
+            <a href="https://scholar.google.com/citations?authuser=1&user=s3dnwq8AAAAJ">Google Scholar</a> | <a href="https://www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a> | <a href="/images/CV.pdf">CV</a>
           </td>
         </tr>
       </table>
@@ -86,14 +94,13 @@
     <div class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
-        I am currently an Ph.D Candidate in the Department of Computer Science at Yonsei University under the supervision of Prof. Youngsok Kim.
-        I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020.
+        I am a Post. Doc. Researcher in Centor for AI on <a href="https://www.kist.re.kr/ko/index.do"> Korea Institute of Science and Technology (KIST) </a>. <br>
+        I recieved my Ph.D. and BSe in the Department of <a href="https://cs.yonsei.ac.kr/">Computer Science and Engineering</a> at <a href="https://yonsei.ac.kr/">Yonsei University</a> under the supervision of <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a>.
+        <!-- I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. -->
           <ul>
-            <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li>
-            <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li>
+            <!-- <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li> -->
+            <!-- <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li> -->
             <li>Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br></li>
-            <li><a href="https://www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a><br></li>
-            <li><a href="/images/CV.pdf">CV</a><br></li>
           </ul>
 
         <h1>Research Interests</h1>
