[update] profile & email

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,13 +94,11 @@
     <div class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
-        I am a Post. Doc. Researcher in Centor for AI on <a href="https://www.kist.re.kr/ko/index.do"> Korea Institute of Science and Technology (KIST) </a>. <br>
+        I am a Post. Doc. Researcher in <a href="https://vig.kist.re.kr/home">Visual Intelligence Group (VIG)</a> of Centor for AI on <a href="https://www.kist.re.kr/ko/index.do"> Korea Institute of Science and Technology (KIST) </a>. <br>
         I recieved my Ph.D. and BSe in the Department of <a href="https://cs.yonsei.ac.kr/">Computer Science and Engineering</a> at <a href="https://yonsei.ac.kr/">Yonsei University</a> under the supervision of <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a>.
         <!-- I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. -->
           <ul>
-            <!-- <li>Ph.D Candidate at <a href="https://hpcp.yonsei.ac.kr">HPCP Lab @ Yonsei University</a></li> -->
-            <!-- <li>Advisor: <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a></li> -->
-            <li>Email: <a href="mailto:jinwoo1029@yonsei.ac.kr">jinwoo1029@yonsei.ac.kr</a><br></li>
+            <li>Email: <a href="mailto:jinwoo1029@kist.re.kr">jinwoo1029@kist.re.kr</a><br></li>
           </ul>
 
         <h1>Research Interests</h1>
