[fix] scholar address

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
           <td valign="bottom" style="padding-left: 1em;">
             <h1>Jinwoo Choi</h1>
             <!-- <h4>HPCP Lab @ Yonsei University</h4> -->
-            <a href="https://scholar.google.com/citations?authuser=1&user=s3dnwq8AAAAJ">Google Scholar</a> | <a href="https://www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a> | <a href="/images/CV.pdf">CV</a>
+            <a href="https://scholar.google.com/citations?authuser=1&user=7x_atNQAAAAJ">Google Scholar</a> | <a href="https://www.linkedin.com/in/jinwoo-choi-a0a916264">Linkedin</a> | <a href="/images/CV.pdf">CV</a>
           </td>
         </tr>
       </table>
