--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,6 +112,13 @@
         <h1>Publications</h1>
           <ol>
             <li>
+              <b>FaScalSQL: A Fast and Scalable GPU-Accelerated SQL Query Engine for Out-of-Memory Tables</b> <br>
+              Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Kwanghyun Park, Jinho Lee, Joonsung Kim, and Youngsok Kim <br>
+              <i>42nd IEEE International Conference on Data Engineering (<b>ICDE</b>), May. 2026 (to appear)</i> <br>
+              <span class="label label-sys">System SW</span> <span class="label label-gpu">GPU</span> <span class="label label-database">Database</span>
+            </li>
+            <br>
+            <li>
               <b>DMO-DB: Mitigating the Data Movement Bottlenecks of GPU-Accelerated Relational OLAP</b> <br>
               Chaemin Lim, Suhyun Lee, <b>Jinwoo Choi</b>, Joonsung Kim, Jinho Lee, and Youngsok Kim <br>
               <i>34th International Conference on Parallel Architectures and Compilation Techniques (<b>PACT</b>), Nov. 2025 (to appear)</i> <br>
