--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,6 +176,11 @@
           <h1>Patent</h1>
           <ul>
             <li>
+              Method and Apparatus for Performing Deep Learning Operations (KR Patent App. 10-2020-0144563) <br>
+              Youngsok Kim, <b>Jinwoo Choi</b>, Jounghoo Lee
+            </li>
+            <br>
+            <li>
               Artificial Intelligence Device Based on Trust Environment (JP Patent App. 2023-129058) <br>
               Youngsok Kim, <b>Jinwoo Choi</b>, Chaemin Lim, Suhyun Lee, Dokyung Song, Jinho Lee
             </li>
