--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
     <div class="container">
       <!-- <div id="content"> -->
         <h1>Introduce</h1>
-        I am a Post. Doc. Researcher in <a href="https://vig.kist.re.kr/home">Visual Intelligence Group (VIG)</a> of Centor for AI at <a href="https://www.kist.re.kr/ko/index.do"> Korea Institute of Science and Technology (KIST) </a>. <br>
+        I am a Post. Doc. Researcher in <a href="https://vig.kist.re.kr/home">Visual Intelligence Group (VIG)</a> of Center for AI at <a href="https://www.kist.re.kr/ko/index.do"> Korea Institute of Science and Technology (KIST) </a>. <br>
         I received my Ph.D. and BSe in the Department of <a href="https://cs.yonsei.ac.kr/">Computer Science and Engineering</a> at <a href="https://yonsei.ac.kr/">Yonsei University</a> under the supervision of <a href="https://hpcp.yonsei.ac.kr/~youngsok/">Prof. Youngsok Kim</a>.
         <!-- I received the BS degree in computer science, Yonsei University, Seoul, South Korea, in 2020. -->
           <ul>
